--- a/composer.json
+++ b/composer.json
@@ -5,7 +5,8 @@
         "psr-4": {
             "Base\\":"Base",
             "Router\\":"Router",
-            "Controller\\":"Controller"
+            "Controller\\":"Controller",
+            "View\\":"View"
 
         }
     }
